add IndexNow submission on blog post publish
- Create lib/indexnow.ts utility for submitting URLs to IndexNow API
- Trigger IndexNow when a new published post is created
- Trigger IndexNow when a draft post is published
- Add INDEXNOW_KEY to wrangler.toml and deploy workflow
- Submits all locale URLs (/blog/slug and /{locale}/blog/slug)
- Only runs in production (when INDEXNOW_KEY is set)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,7 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           TURNSTILE_SECRET_KEY: ${{ secrets.TURNSTILE_SECRET_KEY }}
           D1_DATABASE_ID: ${{ secrets.D1_DATABASE_ID }}
+          INDEXNOW_KEY: ${{ secrets.INDEXNOW_KEY }}
 
       - name: Build
         run: pnpm build
