feat: add daily tech news automation pipeline
Add automated daily tech news generation and publishing system:

- New GitHub Actions workflow (.github/workflows/daily-tech-news.yml)
  - Scheduled daily at 10:00 AM UTC
  - Uses Perplexity AI for news aggregation
  - Uses Claude Code for blog post generation in 6 locales
  - Uses humanizer skill to remove AI writing artifacts
  - Manual trigger support for testing

- New automation API endpoint (src/app/api/automation/posts/route.ts)
  - Bearer token authentication
  - Creates blog posts from JSON payload
  - Triggers IndexNow submission on publish

- Configuration updates
  - Added AUTOMATION_API_KEY to wrangler.toml.example
  - Added AUTOMATION_API_KEY to deployment workflow

- Removed obsolete blog-post-security-first-development.md

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,7 @@ jobs:
           TURNSTILE_SECRET_KEY: ${{ secrets.TURNSTILE_SECRET_KEY }}
           D1_DATABASE_ID: ${{ secrets.D1_DATABASE_ID }}
           INDEXNOW_KEY: ${{ secrets.INDEXNOW_KEY }}
+          AUTOMATION_API_KEY: ${{ secrets.AUTOMATION_API_KEY }}
 
       - name: Build
         run: pnpm build
