--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -15,6 +15,7 @@ TELEGRAM_BOT_TOKEN = "${TELEGRAM_BOT_TOKEN}"
 TELEGRAM_CHAT_ID = "${TELEGRAM_CHAT_ID}"
 TURNSTILE_SECRET_KEY = "${TURNSTILE_SECRET_KEY}"
 INDEXNOW_KEY = "${INDEXNOW_KEY}"
+AUTOMATION_API_KEY = "${AUTOMATION_API_KEY}"
 
 [[d1_databases]]
 binding = "DB"
