--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@ai-sdk/perplexity": "^3.0.11",
     "@anthropic-ai/sdk": "^0.71.2",
     "@opennextjs/cloudflare": "^1.15.1",
     "@tailwindcss/postcss": "^4",
@@ -42,6 +43,7 @@
     "@types/react": "^19",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^19",
+    "ai": "^6.0.49",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
