--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^19",
     "ai": "^6.0.49",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
