feat: add Cloudflare cron worker for blog generation trigger
Replace unreliable GitHub Actions scheduled workflow with Cloudflare
Worker cron trigger. The worker calls GitHub API to dispatch the
existing daily-tech-news workflow at 10:30 UTC daily.

- Add workers/blog-trigger/ with minimal dispatch worker
- Add wrangler.blog-trigger.toml with cron schedule
- Update deploy.yml to deploy blog-trigger worker
- Update README diagram to reflect new architecture

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,6 +112,14 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
+      - name: Deploy blog-trigger worker
+        run: |
+          pnpm wrangler deploy --config wrangler.blog-trigger.toml
+          echo "$GH_PAT_WORKFLOW" | pnpm wrangler secret put GITHUB_TOKEN --config wrangler.blog-trigger.toml
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          GH_PAT_WORKFLOW: ${{ secrets.GH_PAT_WORKFLOW }}
+
       - name: Upload sitemap URLs
         uses: actions/upload-artifact@v4
         with:
