--- a/.github/workflows/daily-tech-news.yml
+++ b/.github/workflows/daily-tech-news.yml
@@ -4,9 +4,7 @@ permissions:
   contents: read
 
 on:
-  schedule:
-    - cron: '30 10 * * *'  # 10:30 AM UTC daily
-  workflow_dispatch:  # Manual trigger for testing
+  workflow_dispatch:  # Triggered by Cloudflare cron worker or manual
 
 jobs:
   generate-post:
