--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
 # Cloudflare Turnstile (spam protection)
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=0x4AAAAAAXXXXXXXXXXXXXXX
 
-# Google Analytics (GA4)
-# Get from: Google Analytics > Admin > Data Streams > your stream > Measurement ID
-NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+# Google Tag Manager
+# Get from: https://tagmanager.google.com > Container ID
+NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
 
 # Google Search Console verification
 # Get from: Google Search Console > Settings > Ownership verification > HTML tag
 # Copy only the content value, not the full meta tag
 NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=your-verification-code
+
+# Local development
+# Bypasses Cloudflare Access authentication for admin panel
+ADMIN_DEV_BYPASS=true
+
+# Blog post generation (optional, for running generate-news-post.ts locally)
+# PERPLEXITY_API_KEY=pplx-xxxxxxxxxxxx
+# ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxx
