--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@ai-sdk/perplexity": "^3.0.12",
     "@anthropic-ai/sdk": "^0.71.2",
+    "@aws-sdk/client-s3": "^3.978.0",
     "@opennextjs/cloudflare": "^1.16.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^25",
