--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -22,6 +22,10 @@ binding = "DB"
 database_name = "itguys-ro"
 database_id = "${D1_DATABASE_ID}"
 
+[[r2_buckets]]
+binding = "BLOG_IMAGES"
+bucket_name = "itguys-images"
+
 [observability]
 [observability.logs]
 enabled = true
