optimized the image selection for blog posts

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ ADMIN_DEV_BYPASS=true
 # Blog post generation (optional, for running generate-news-post.ts locally)
 # PERPLEXITY_API_KEY=pplx-xxxxxxxxxxxx
 # ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxx
+
+# R2 image storage (CI only — used by generate-news-post.ts in GitHub Actions)
+# Create API token at: Cloudflare Dashboard > R2 > Overview > Manage R2 API tokens
+# R2_ACCOUNT_ID=your-cloudflare-account-id
+# R2_ACCESS_KEY_ID=your-r2-access-key-id
+# R2_SECRET_ACCESS_KEY=your-r2-secret-access-key
+# R2_PUBLIC_URL=https://r2-images.itguys.ro
