--- a/.github/workflows/sitemap-indexing.yml
+++ b/.github/workflows/sitemap-indexing.yml
@@ -282,6 +282,33 @@ jobs:
 
           echo "Stored $STORED_COUNT URLs in D1"
 
+      - name: Cleanup stale URLs from D1
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        run: |
+          # Find URLs in D1 that are no longer in the sitemap
+          comm -13 sitemap-urls.txt submitted-urls.txt > stale-urls.txt
+
+          STALE_COUNT=$(wc -l < stale-urls.txt | tr -d ' ')
+
+          if [ "$STALE_COUNT" -eq 0 ] || [ ! -s stale-urls.txt ]; then
+            echo "No stale URLs to remove"
+            exit 0
+          fi
+
+          echo "Removing $STALE_COUNT stale URLs from D1..."
+          REMOVED=0
+
+          while IFS= read -r url; do
+            if [ -n "$url" ]; then
+              wrangler d1 execute itguys-ro --remote \
+                --command "DELETE FROM indexnow_submitted WHERE url = '$url'"
+              REMOVED=$((REMOVED + 1))
+            fi
+          done < stale-urls.txt
+
+          echo "Removed $REMOVED stale URLs"
+
       - name: Summary
         run: |
           echo "=== Sitemap Indexing Summary ==="
@@ -291,4 +318,8 @@ jobs:
 
           if [ -f indexnow-submitted.txt ]; then
             echo "Successfully submitted to IndexNow: $(wc -l < indexnow-submitted.txt | tr -d ' ')"
+          fi
+
+          if [ -f stale-urls.txt ] && [ -s stale-urls.txt ]; then
+            echo "Stale URLs removed: $(wc -l < stale-urls.txt | tr -d ' ')"
           fi
