security: move worker secrets from wrangler vars to wrangler secret put
Secrets (TELEGRAM_BOT_TOKEN, AUTOMATION_API_KEY, etc.) were being
interpolated into wrangler.toml [vars] via envsubst, causing them
to appear in GitHub Actions logs. Now they're set via `wrangler secret
put` after deploy, which stores them encrypted in Cloudflare. Local
dev uses .dev.vars (gitignored) instead.

--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -11,11 +11,8 @@ routes = [
 directory = ".open-next/assets"
 
 [vars]
-TELEGRAM_BOT_TOKEN = "${TELEGRAM_BOT_TOKEN}"
-TELEGRAM_CHAT_ID = "${TELEGRAM_CHAT_ID}"
-TURNSTILE_SECRET_KEY = "${TURNSTILE_SECRET_KEY}"
-INDEXNOW_KEY = "${INDEXNOW_KEY}"
-AUTOMATION_API_KEY = "${AUTOMATION_API_KEY}"
+# Sensitive values are set via `wrangler secret put` in the deploy workflow
+# Non-secret vars can be added here
 
 [[d1_databases]]
 binding = "DB"
