--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,12 +45,7 @@ jobs:
       - name: Generate wrangler.toml from example
         run: envsubst < wrangler.toml.example > wrangler.toml
         env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          TURNSTILE_SECRET_KEY: ${{ secrets.TURNSTILE_SECRET_KEY }}
           D1_DATABASE_ID: ${{ secrets.D1_DATABASE_ID }}
-          INDEXNOW_KEY: ${{ secrets.INDEXNOW_KEY }}
-          AUTOMATION_API_KEY: ${{ secrets.AUTOMATION_API_KEY }}
 
       - name: Build
         run: pnpm build
@@ -92,6 +87,21 @@ jobs:
         run: pnpm wrangler deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+
+      - name: Set worker secrets
+        run: |
+          echo "$TELEGRAM_BOT_TOKEN" | pnpm wrangler secret put TELEGRAM_BOT_TOKEN
+          echo "$TELEGRAM_CHAT_ID" | pnpm wrangler secret put TELEGRAM_CHAT_ID
+          echo "$TURNSTILE_SECRET_KEY" | pnpm wrangler secret put TURNSTILE_SECRET_KEY
+          echo "$INDEXNOW_KEY" | pnpm wrangler secret put INDEXNOW_KEY
+          echo "$AUTOMATION_API_KEY" | pnpm wrangler secret put AUTOMATION_API_KEY
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TURNSTILE_SECRET_KEY: ${{ secrets.TURNSTILE_SECRET_KEY }}
+          INDEXNOW_KEY: ${{ secrets.INDEXNOW_KEY }}
+          AUTOMATION_API_KEY: ${{ secrets.AUTOMATION_API_KEY }}
 
       - name: Deploy blog-trigger worker
         run: |
