docs: update .env.example to reflect .dev.vars secret setup

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,25 @@
+# .env.local — Next.js build-time public variables
+# Copy this file to .env.local and fill in the values
+
 # Cloudflare Turnstile (spam protection)
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=0x4AAAAAAXXXXXXXXXXXXXXX
 
 # Google Tag Manager
-# Get from: https://tagmanager.google.com > Container ID
 NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
-
-# Google Search Console verification
-# Get from: Google Search Console > Settings > Ownership verification > HTML tag
-# Copy only the content value, not the full meta tag
-NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=your-verification-code
-
-# Local development
-# Bypasses Cloudflare Access authentication for admin panel
-ADMIN_DEV_BYPASS=true
 
 # Blog post generation (optional, for running generate-news-post.ts locally)
 # PERPLEXITY_API_KEY=pplx-xxxxxxxxxxxx
 # ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxx
-
-# R2 image storage (CI only — used by generate-news-post.ts in GitHub Actions)
-# Create API token at: Cloudflare Dashboard > R2 > Overview > Manage R2 API tokens
 # R2_ACCOUNT_ID=your-cloudflare-account-id
 # R2_ACCESS_KEY_ID=your-r2-access-key-id
 # R2_SECRET_ACCESS_KEY=your-r2-secret-access-key
 # R2_PUBLIC_URL=https://r2-images.itguys.ro
+
+# ---
+# Worker secrets go in .dev.vars (loaded by wrangler dev):
+#   TELEGRAM_BOT_TOKEN=...
+#   TELEGRAM_CHAT_ID=...
+#   TURNSTILE_SECRET_KEY=...
+#
+# Non-secret worker config is in wrangler.toml [vars]:
+#   ADMIN_DEV_BYPASS=true
