--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ NEXT_PUBLIC_TURNSTILE_SITE_KEY=0x4AAAAAAXXXXXXXXXXXXXXX
 NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
 
 # Blog post generation (optional, for running generate-news-post.ts locally)
-# PERPLEXITY_API_KEY=pplx-xxxxxxxxxxxx
-# ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxx
+PERPLEXITY_API_KEY=pplx-xxxxxxxxxxxx
+ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxx
 
 # ---
 # Worker secrets go in .dev.vars (loaded by wrangler dev):
