added Microsoft Clarity for heatmaps

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ NEXT_PUBLIC_TURNSTILE_SITE_KEY=0x4AAAAAAXXXXXXXXXXXXXXX
 # Google Tag Manager
 NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
 
+# Microsoft Clarity (heatmaps)
+NEXT_PUBLIC_CLARITY_ID=xxxxxxxxxx
+
 # Blog post generation (optional, for running generate-news-post.ts locally)
 PERPLEXITY_API_KEY=pplx-xxxxxxxxxxxx
 ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxx
