--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@marsidev/react-turnstile": "^1.4.1",
+    "@microsoft/clarity": "^1.0.2",
     "@next/third-parties": "^16.1.6",
     "clsx": "^2.1.1",
     "embla-carousel-auto-scroll": "^8.6.0",
