--- a/.github/workflows/daily-tech-news.yml
+++ b/.github/workflows/daily-tech-news.yml
@@ -82,3 +82,14 @@ jobs:
           fi
 
           echo "Post published successfully"
+
+      - name: Post to Twitter/X
+        if: success()
+        continue-on-error: true
+        env:
+          TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
+          TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
+          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
+          SITE_URL: ${{ vars.SITE_URL }}
+        run: pnpm tsx scripts/post-tweet.ts
