--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
+    "twitter-api-v2": "^1.29.0",
     "typescript": "^5",
     "wrangler": "^4.61.1"
   }
