--- a/.github/workflows/daily-tech-news.yml
+++ b/.github/workflows/daily-tech-news.yml
@@ -123,6 +123,7 @@ jobs:
           FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
           FACEBOOK_APP_ID: ${{ secrets.FACEBOOK_APP_ID }}
           FACEBOOK_APP_SECRET: ${{ secrets.FACEBOOK_APP_SECRET }}
+          FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
           GH_PAT_WORKFLOW: ${{ secrets.GH_PAT_WORKFLOW }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: pnpm tsx scripts/refresh-facebook-token.ts
