feat: add blog image management with upload, candidates, and vision scoring
- Add post_image_candidates table and CRUD for storing scraped images
- Add R2 binding (BLOG_IMAGES) for direct image upload from admin
- Add upload-image and image-candidates API endpoints
- Add ImageUpload (drag & drop) and ImageCandidatesGallery admin components
- Update post edit page with image management section
- Store image candidates from blog generation in both admin and automation APIs
- Replace text-based image picking with vision-scored candidates (relevance,
  watermark detection, hero image quality) in generate script
- Add Perplexity return_images to research call for zero-cost image candidates
- Add targeted fallback image search when all candidates are rejected

--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -19,6 +19,10 @@ binding = "DB"
 database_name = "itguys-ro"
 database_id = "${D1_DATABASE_ID}"
 
+[[r2_buckets]]
+binding = "BLOG_IMAGES"
+bucket_name = "itguys-blog-images"
+
 [observability]
 [observability.logs]
 enabled = true
