fix: image upload adds to candidates, fix markdown list spacing
- Uploaded images now appear in the image candidates gallery
- Refresh candidates gallery after upload
- Add R2_PUBLIC_URL to wrangler.toml.example for deployed workers
- Fix markdown lists rendering with extra <br /> tags between items

--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -13,6 +13,7 @@ directory = ".open-next/assets"
 [vars]
 # Sensitive values are set via `wrangler secret put` in the deploy workflow
 # Non-secret vars can be added here
+R2_PUBLIC_URL = "https://r2.itguys.ro"
 
 [[d1_databases]]
 binding = "DB"
